--- a/pom.xml
+++ b/pom.xml
@@ -8,14 +8,13 @@
   <artifactId>projektarbeit</artifactId>
   <version>0.0.1-SNAPSHOT</version>
 
-  <name>projektarbeit</name>
+  <name>projektarbeit_remote</name>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
   </properties>
-
 
   <dependencies>
     <dependency>
@@ -91,7 +90,7 @@
               <archive>
                 <manifest>
 		      	<classpathPrefix>/</classpathPrefix>
-		          <mainClass>staciwa.projektarbeit.App_local</mainClass>
+		          <mainClass>staciwa.projektarbeit.App_remote</mainClass>
               	</manifest>
               </archive>
       	  </configuration>
@@ -99,12 +98,28 @@
         <!-- config for assembly single -->
         <plugin>
       	  <artifactId>maven-assembly-plugin</artifactId>
+      	  <!-- 
       	  <version>3.0.2</version>
+      	   -->
+      	  
       	   <configuration>
               <descriptors>
               	  <descriptor>src/main/assembly/src.xml</descriptor>
               </descriptors>
+              
+              <!-- Here wird die Hauptklasse für "mvn clean compile assembly:single" definiert. -->
+              <archive>
+                <manifest>
+                  <mainClass>staciwa.projektarbeit.App_remote</mainClass>
+                </manifest>
+              </archive>
+              
+              <descriptorRefs>
+            	<descriptorRef>jar-with-dependencies</descriptorRef>
+              </descriptorRefs>
+              
            </configuration>
+           
        	   <executions>
         	<execution>
           	  <id>make-assembly</id>
@@ -116,7 +131,9 @@
       	  </executions>
     	</plugin>
     	
-    	<!-- Here wird die Hauptklasse für "mvn clean compile assembly:single" definiert. -->
+    	
+    	
+    	<!-- TODO entfernen?
     	<plugin>
           <artifactId>maven-assembly-plugin</artifactId>
           <configuration>
@@ -130,6 +147,9 @@
           </descriptorRefs>
           </configuration>
         </plugin>
+    	
+    	 -->
+    	
         
       </plugins>
     </pluginManagement>
